MDEV-19238 Mariadb spider - crashes on where null