sql/sql_select.cc
@@ -3094,7 +3094,7 @@ bool JOIN::make_aggr_tables_info()
     distinct in the engine, so we do this for all queries, not only
     GROUP BY queries.
   */
-  if (tables_list && !procedure)
+  if (tables_list && !procedure && join_tab)
   {
     /*
       At the moment we only support push down for queries where
